Update StudentContainer